--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "dependencies": {
     "express": "^4.16.2",
     "@material-ui/core": "^3.0.1",
-    "ganache-cli": "^6.1.8",
     "mnemonic-generator": "^1.0.0",
     "morgan": "^1.9.0",
     "react": "^16.4.2",
@@ -16,12 +15,13 @@
     "redux-saga": "^0.16.0",
     "truffle": "^4.1.14",
     "truffle-hdwallet-provider": "0.0.6",
-    "web3": "^1.0.0-beta.33"
+    "web3": "1.0.0-beta.33"
   },
   "scripts": {
     "ganache": "ganache-cli -m 'candy maple cake sugar pudding cream honey rich smooth crumble sweet treat'",
     "compile": "truffle compile && cp -r build/contracts/. src/web3/abis/",
     "migrate-dev": "truffle migrate --reset --network development && cp -r build/contracts/. src/web3/abis/",
+    "migrate-ropsten": "truffle migrate --reset --network ropsten && cp -r build/contracts/. src/web3/abis/",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
