--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "classnames": "^2.2.5",
-		"compression": "^1.7.1",
-    "express": "^4.16.2",
     "@material-ui/core": "^3.0.1",
-    "mnemonic-generator": "^1.0.0",
+    "classnames": "^2.2.5",
+    "compression": "^1.7.1",
+    "express": "^4.16.2",
     "helmet": "^3.9.0",
-		"history": "^4.7.2",
+    "history": "^4.7.2",
+    "mnemonic-generator": "^1.0.0",
+    "moment": "^2.22.2",
     "morgan": "^1.9.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
