--- a/package.json
+++ b/package.json
@@ -1,7 +1,18 @@
 {
-  "name": "Rainbow-Token",
-  "version": "0.1.0",
+  "name": "rainbow-token",
+  "version": "0.1.0-dev",
   "private": true,
+  "description": "Rainbow Token decentralized Application",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ConsenSys/rainbow-token.git"
+  },
+  "author": "ConsenSys France",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/ConsenSys/rainbow-token"
+  },
+  "homepage": "https://github.com/ConsenSys/rainbow-token",
   "dependencies": {
     "@material-ui/core": "^3.0.1",
     "classnames": "^2.2.5",
@@ -18,15 +29,68 @@
     "react-scripts": "1.1.5",
     "redux": "^4.0.0",
     "redux-saga": "^0.16.0",
-    "truffle": "^4.1.14",
-    "truffle-hdwallet-provider": "0.0.6",
     "web3": "1.0.0-beta.33"
   },
+  "devDependencies": {
+    "babel-polyfill": "^6.23.0",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-stage-2": "^6.18.0",
+    "babel-preset-stage-3": "^6.17.0",
+    "babel-register": "^6.23.0",
+    "chai": "^4.0.2",
+    "chai-as-promised": "^7.0.0",
+    "chai-bignumber": "^2.0.0",
+    "coveralls": "^2.13.1",
+    "dotenv": "^4.0.0",
+    "enzyme": "^3.3.0",
+		"enzyme-adapter-react-16": "^1.1.1",
+		"enzyme-to-json": "^3.3.0",
+    "eslint": "^4.11.0",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-node": "^5.2.1",
+    "eslint-plugin-promise": "^3.6.0",
+    "eslint-plugin-standard": "^3.0.1",
+    "ethereumjs-util": "^5.1.2",
+    "ethjs-abi": "^0.2.1",
+		"husky": "^0.14.3",
+		"lint-staged": "^6.0.0",
+		"prettier": "^1.10.2",
+    "solidity-coverage": "^0.5.11",
+    "solium": "^1.1.7",
+    "truffle": "^4.1.8",
+    "truffle-hdwallet-provider": "0.0.3"
+  },
+  "lint-staged": {
+		"src/**/*.{js,jsx,json,css}": [
+			"prettier --write",
+			"git add"
+		]
+	},
+	"jest": {
+		"collectCoverageFrom": [
+			"src/**/*.{js,jsx}",
+			"!**/src/index.js",
+			"!**/src/registerServiceWorker.js"
+		]
+	},
+	"prettier": {
+		"useTabs": false,
+		"tabWidth": 4
+	},
   "scripts": {
-    "ganache": "ganache-cli -m 'candy maple cake sugar pudding cream honey rich smooth crumble sweet treat'",
-    "compile": "truffle compile && cp -r build/contracts/. src/web3/abis/",
-    "migrate-dev": "truffle migrate --reset --network development && cp -r build/contracts/. src/web3/abis/",
-    "migrate-ropsten": "truffle migrate --reset --network ropsten && cp -r build/contracts/. src/web3/abis/",
+    "lint": "eslint ./src ./migrations ./test ",
+    "lint:fix": "eslint ./src ./test ./migrations --fix",
+    "lint:sol": "solium -d .",
+    "lint:sol:fix": "solium -d . --fix",
+    "lint:all": "npm run lint && npm run lint:sol",
+    "lint:all:fix": "npm run lint:fix && npm run lint:sol:fix",
+    "console": "truffle console",
+    "contract:test": "truffle test --network development",
+    "contract:test:coverage": "solidity-coverage",
+    "contract:compile": "truffle compile && cp -r build/contracts/. src/web3/abis/",
+    "contract:migrate:dev": "truffle migrate --reset --network development && cp -r build/contracts/. src/web3/abis/",
+    "contract:migrate:ropsten": "truffle migrate --reset --network ropsten && cp -r build/contracts/. src/web3/abis/",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
