--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,11 @@ jobs:
   fast_finish: true 
   include:
     - stage: tests
-      name: "contract tests"
+      name: "test-contracts"
       script: npm run contract:test:coverage
     - stage: tests
-      name: "test-lint"
+      name: "test-contract-lint"
+      script: npm run lint:sol
+    - stage: tests
+      name: "test-dapp-lint"
       script: npm run lint:sol
