--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "web3": "1.0.0-beta.33"
   },
   "devDependencies": {
+    "babel-eslint": "^7.2.3",
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-stage-2": "^6.18.0",
@@ -43,43 +44,48 @@
     "coveralls": "^2.13.1",
     "dotenv": "^4.0.0",
     "enzyme": "^3.3.0",
-		"enzyme-adapter-react-16": "^1.1.1",
-		"enzyme-to-json": "^3.3.0",
-    "eslint": "^4.11.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "enzyme-to-json": "^3.3.0",
+    "eslint": "^4.19.1",
+    "eslint-config-react-app": "^2.1.0",
     "eslint-config-standard": "^10.2.1",
-    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-flowtype": "^2.50.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-mocha": "^5.2.0",
     "eslint-plugin-node": "^5.2.1",
     "eslint-plugin-promise": "^3.6.0",
+    "eslint-plugin-react": "^7.11.1",
     "eslint-plugin-standard": "^3.0.1",
     "ethereumjs-util": "^5.1.2",
     "ethjs-abi": "^0.2.1",
-		"husky": "^0.14.3",
-		"lint-staged": "^6.0.0",
-		"prettier": "^1.10.2",
+    "husky": "^0.14.3",
+    "lint-staged": "^6.0.0",
+    "prettier": "^1.10.2",
     "solidity-coverage": "^0.5.11",
     "solium": "^1.1.7",
     "truffle": "^4.1.8",
     "truffle-hdwallet-provider": "0.0.3"
   },
   "lint-staged": {
-		"src/**/*.{js,jsx,json,css}": [
-			"prettier --write",
-			"git add"
-		]
-	},
-	"jest": {
-		"collectCoverageFrom": [
-			"src/**/*.{js,jsx}",
-			"!**/src/index.js",
-			"!**/src/registerServiceWorker.js"
-		]
-	},
-	"prettier": {
-		"useTabs": false,
-		"tabWidth": 4
-	},
+    "src/**/*.{js,jsx,json,css}": [
+      "prettier --write",
+      "git add"
+    ]
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "src/**/*.{js,jsx}",
+      "!**/src/index.js",
+      "!**/src/registerServiceWorker.js"
+    ]
+  },
+  "prettier": {
+    "useTabs": false,
+    "tabWidth": 4
+  },
   "scripts": {
-    "lint": "eslint ./src ./migrations ./test ",
+    "lint": "eslint ./src ./migrations ./test",
     "lint:fix": "eslint ./src ./test ./migrations --fix",
     "lint:sol": "solium -d .",
     "lint:sol:fix": "solium -d . --fix",
