--- a/package.json
+++ b/package.json
@@ -85,12 +85,12 @@
     "tabWidth": 4
   },
   "scripts": {
-    "lint": "eslint ./src ./migrations ./test",
-    "lint:fix": "eslint ./src ./test ./migrations --fix",
+    "lint:js": "eslint .src/ ./migrations ./test",
+    "lint:js:fix": "eslint ./test ./migrations --fix",
     "lint:sol": "solium -d .",
     "lint:sol:fix": "solium -d . --fix",
-    "lint:all": "npm run lint && npm run lint:sol",
-    "lint:all:fix": "npm run lint:fix && npm run lint:sol:fix",
+    "lint:all": "npm run lint:js && npm run lint:sol",
+    "lint:all:fix": "npm run lint:js:fix && npm run lint:sol:fix",
     "console": "truffle console",
     "contract:test": "truffle test --network development",
     "contract:test:coverage": "solidity-coverage",
