--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,11 @@ bower_components
 
 # Contract artifact
 build
+dist
+coverage
+coverage.json
+coverageEnv
+allFiredEvents
 
 # Compiled binary addons (https://nodejs.org/api/addons.html)
 build/Release
