--- a/ganache/docker-compose.yml
+++ b/ganache/docker-compose.yml
@@ -7,13 +7,14 @@ services:
     ports:
       - 7545:8545
 
-  testrpc-sc:
-    build:
-      dockerfile: ./ganache/Dockerfile
-      context: ..
-    command: --gasLimit 0xfffffffffff ${ACCOUNTS}
-    ports:
-      - 8555:8555
-    volumes:
-      - ..:/usr/src/app
+  # Some bug when using testrpc-sc in docker (jsonRPC does not seem accessible)
+  # testrpc-sc:
+  #  build:
+  #     dockerfile: ./ganache/Dockerfile
+  #     context: ..
+  #   command: --gasLimit 0xfffffffffff ${ACCOUNTS}
+  #   ports:
+  #     - 8555:8555
+  #   volumes:
+  #     - ..:/usr/src/app
 
