--- a/package.json
+++ b/package.json
@@ -99,6 +99,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "ganache:start": "cd ganache && ACCOUNTS=`cat accounts.txt` docker-compose up",
+    "ganache:stop": "cd ganache && docker-compose stop"
   }
 }
