--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "homepage": "https://github.com/ConsenSys/rainbow-token",
   "dependencies": {
     "@material-ui/core": "^3.0.1",
+    "@material-ui/icons": "^3.0.1",
     "classnames": "^2.2.5",
     "compression": "^1.7.1",
     "express": "^4.16.2",
