--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mnemonic-generator": "^1.0.0",
     "morgan": "^1.9.0",
     "react": "^16.4.2",
+    "react-blockies": "^1.4.0",
     "react-dom": "^16.4.2",
     "react-redux": "^5.0.7",
     "react-scripts": "1.1.5",
