--- a/package.json
+++ b/package.json
@@ -85,6 +85,12 @@
     "useTabs": false,
     "tabWidth": 4
   },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ],
   "scripts": {
     "lint:js": "eslint .src/ ./migrations ./test",
     "lint:js:fix": "eslint ./test ./migrations --fix",
