--wip-- [skip ci]

--- a/package.json
+++ b/package.json
@@ -22,16 +22,15 @@
     "history": "^4.7.2",
     "mnemonic-generator": "^1.0.0",
     "morgan": "^1.9.0",
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2",
-    "react-redux": "^5.0.7",
-    "react-scripts": "1.1.5",
-    "redux": "^4.0.0",
-    "redux-saga": "^0.16.0",
+    "react": "^16.8.3",
+    "react-dom": "^16.8.3",
+    "react-redux": "^6.0.1",
+    "react-scripts": "^2.0.0",
+    "redux": "^4.0.1",
+    "redux-saga": "^1.0.2",
     "web3": "1.0.0-beta.33"
   },
   "devDependencies": {
-    "babel-eslint": "^7.2.3",
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-stage-2": "^6.18.0",
@@ -45,17 +44,6 @@
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "enzyme-to-json": "^3.3.0",
-    "eslint": "^4.19.1",
-    "eslint-config-react-app": "^2.1.0",
-    "eslint-config-standard": "^10.2.1",
-    "eslint-plugin-flowtype": "^2.50.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^5.1.1",
-    "eslint-plugin-mocha": "^5.2.0",
-    "eslint-plugin-node": "^5.2.1",
-    "eslint-plugin-promise": "^3.6.0",
-    "eslint-plugin-react": "^7.11.1",
-    "eslint-plugin-standard": "^3.0.1",
     "ethereumjs-util": "^5.1.2",
     "ethjs-abi": "^0.2.1",
     "husky": "^0.14.3",
@@ -93,14 +81,20 @@
     "console": "truffle console",
     "contract:test": "truffle test --network development",
     "contract:test:coverage": "solidity-coverage",
-    "contract:compile": "truffle compile && cp -r build/contracts/. src/web3/abis/",
-    "contract:migrate:dev": "truffle migrate --reset --network development && cp -r build/contracts/. src/web3/abis/",
-    "contract:migrate:ropsten": "truffle migrate --reset --network ropsten && cp -r build/contracts/. src/web3/abis/",
+    "contract:compile": "truffle compile && cp -r build/contracts/. src/web3Config/abis/",
+    "contract:migrate:dev": "truffle migrate --reset --network development && cp -r build/contracts/. src/web3Config/abis/",
+    "contract:migrate:ropsten": "truffle migrate --reset --network ropsten && cp -r build/contracts/. src/web3Config/abis/",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "ganache:start": "cd ganache && ACCOUNTS=`cat accounts.txt` docker-compose up",
     "ganache:stop": "cd ganache && docker-compose stop"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
