--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "rainbow-token",
+  "homepage": "./",
   "version": "0.1.0-dev",
   "private": true,
   "description": "Rainbow Token decentralized Application",
@@ -14,7 +15,8 @@
   },
   "homepage": "https://github.com/ConsenSys/rainbow-token",
   "dependencies": {
-    "@material-ui/core": "^3.0.1",
+    "@material-ui/core": "^3.9.2",
+    "@material-ui/icons": "^3.0.2",
     "classnames": "^2.2.5",
     "compression": "^1.7.1",
     "express": "^4.16.2",
@@ -23,9 +25,11 @@
     "mnemonic-generator": "^1.0.0",
     "morgan": "^1.9.0",
     "react": "^16.8.3",
+    "react-blockies": "^1.4.1",
     "react-dom": "^16.8.3",
     "react-redux": "^6.0.1",
     "react-scripts": "^2.0.0",
+    "react-virtualized": "^9.21.0",
     "redux": "^4.0.1",
     "redux-saga": "^1.0.2",
     "web3": "1.0.0-beta.33"
@@ -81,9 +85,9 @@
     "console": "truffle console",
     "contract:test": "truffle test --network development",
     "contract:test:coverage": "solidity-coverage",
-    "contract:compile": "truffle compile && cp -r build/contracts/. src/web3Config/abis/",
-    "contract:migrate:dev": "truffle migrate --reset --network development && cp -r build/contracts/. src/web3Config/abis/",
-    "contract:migrate:ropsten": "truffle migrate --reset --network ropsten && cp -r build/contracts/. src/web3Config/abis/",
+    "contract:compile": "truffle compile && cp -r contractBuild/. src/web3Config/abis/",
+    "contract:migrate:dev": "truffle migrate --reset --network development && cp -r contractBuild/. src/web3Config/abis/",
+    "contract:migrate:ropsten": "truffle migrate --reset --network ropsten && cp -r contractBuild/. src/web3Config/abis/",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
