--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "bugs": {
     "url": "https://github.com/ConsenSys/rainbow-token"
   },
-  "homepage": "https://github.com/ConsenSys/rainbow-token",
+  "homepage": "./",
   "dependencies": {
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
